Fixed: Missing / broken CSS for Attachments form. Changed: Put attachment form buttons in a floated div to allow the summary to position better.

--- a/forum/styles/blue/style.css
+++ b/forum/styles/blue/style.css
@@ -1654,76 +1654,101 @@ div.spoiler_reveal * {
     text-decoration: none;
 }
 
-#attachments {
+.attachments {
     margin-top: 5px;
 }
 
-#attachments ul {
+.attachments ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-#attachments ul li {
+.attachments ul li {
     margin: 5px 0;
 }
 
-#attachments ul li + li {
+.attachments ul li + li {
     margin-top: 0;
 }
 
-#attachments ul li:last-child {
+.attachments ul li:last-child {
     margin-bottom: 10px;
 }
 
-#attachments ul li label span {
+.attachments ul li label span {
     margin-right: 5px;
 }
 
-#attachments ul li span.filename {
+.attachments ul li span.filename {
     display: inline-block;
     padding-left: 20px;
 }
 
-#attachments ul li.complete span.filename {
+.attachments ul li.complete span.filename {
     background: transparent url('images/attach.png') no-repeat 0 50%;
 }
 
-#attachments ul li.error span.filename {
+.attachments ul li.error span.filename {
     background: transparent url('images/error.png') no-repeat 0 50%;
 }
 
-#attachments ul li.uploading span.filename {
+.attachments ul li.uploading span.filename {
     background: transparent url('images/loading.gif') no-repeat 0 50%;
 }
 
-#attachments ul li button {
+.attachments ul li button {
     float: right;
 }
 
-#attachments ul li.attachment span.cancel,
-#attachments ul li.attachment span.retry {
+.attachments ul li.attachment span.cancel,
+.attachments ul li.attachment span.retry {
     display: inline-block;
     height: 16px;
     text-indent: -9999px;
     width: 16px;
 }
 
-#attachments ul li.attachment span.cancel {
+.attachments ul li.attachment span.cancel {
     background: transparent url('images/stop.png') no-repeat 0 50%;
 }
 
-#attachments ul li.attachment span.retry {
+.attachments ul li.attachment span.retry {
     background: transparent url('images/reload.png') no-repeat 0 50%;
 }
 
-#attachments ul li.error span.progress,
-#attachments ul li.cancelled span.progress,
-#attachments ul li.complete span.progress,
-#attachments ul li.complete span.cancel,
-#attachments ul li.complete span.retry,
-#attachments ul li.uploading span.delete,
-#attachments ul li.uploading span.retry,
-#attachments ul li.error span.delete {
+.attachments ul li.error span.progress,
+.attachments ul li.cancelled span.progress,
+.attachments ul li.complete span.progress,
+.attachments ul li.complete span.cancel,
+.attachments ul li.complete span.retry,
+.attachments ul li.uploading span.delete,
+.attachments ul li.uploading span.retry,
+.attachments ul li.error span.delete {
     display: none;
+}
+
+.attachments ul li.attachment span.filesize {
+    float: right;
+}
+
+.attachments .buttons {
+    float: left;
+}
+
+.attachments .summary {
+    float: right;
+    text-align: right;
+}
+
+.attachments .summary div {
+    margin: 2px 0;
+}
+
+.attachments .summary span.used_post_space,
+.attachments .summary span.free_post_space,
+.attachments .summary span.free_upload_space {
+    display: inline-block;
+    margin-right: 5px;
+    min-width: 60px;
 }
